css/style.css
* {
    margin: 0px;
    padding: 0;
    box-sizing: border-box;
  
}

html {
   margin: 0px;
    font-size: 62.5%;
   width: 100%;
   
  
}

body {
    background-color: #08090c;
    font-family: 'Source Sans Pro', sans-serif;
    color: #f4e5d5;
    font-size: 1.8rem;
    font-weight: 400;
    line-height: 2.4rem;
    font-kerning: auto;
    margin: 0px;
 

}



header {
    background-color: #08090c;
   border-bottom: 1px solid #F5CA9B;
    margin: 0 0 40px;
    display: flex;
    padding: 0;
    width: 100%;
    height: 40rem;
    
}

header>nav {
   min-height: min-content;
    order: 1;
    display: flex;
    display: inline-block;
  align-self: flex-end;
   margin-left: 5%;
   padding-top: 8px;
   list-style: none;
  

}

 #logo  {
    width: 24rem;
    min-width: 15rem;
    padding-top: 16px;
    padding-bottom: 32px;
    order: 2;
   align-self: center;
    transform: translateX(10%);
    margin-top: 0;
   margin: auto;
   transform: translatex(-50%);
    position: relative;
 
 } 
 
   


h1,
h2,
h3,
h4,
h5 {
    color: #F5CA9B;
    line-height: 1.4;
}

h1 {
    font-size: 3.0rem;
    font-family: linotype-didot, serif;
    font-weight: 700;
    font-style: normal;
    padding: 0;
   padding: 0 0 4px 0;
}

h2 {
    font-family: linotype-didot, serif;
    font-size: 2.8rem;
    font-weight: 400;
    padding: 0 0 16px 0;
}

h3 {
    font-family: linotype-didot, serif;
    font-size: 2.6rem;
    font-weight: 400;
    font-style: italic;
    font-style: italic;
    margin: 0 0 16px 0;
    width: 100%;
}

h4 {
    font-family: linotype-didot, serif;
    font-size: 2.2rem;
    font-weight: 400;
    margin: 0 0 24px 0;
}

h5 {
    font-family: linotype-didot, serif;
    font-size: 1.8rem;
    font-weight: 400;
}

.small-bodytext {
    font-size: 1.4rem;
    font-weight: 300;
    padding: 0 5%;
}

.text-uppercase {
    text-transform: uppercase;

}


a {
    color: #8ea1d2fe;
    text-decoration: none;
    font-size: 1.8rem;
}

a:hover {
    color: #a9b2cbfe;
}

a:focus {
    color: #a9b2cbfe;
}

a:visited {
    color: #a9b2cbfe;

}

a:active {
    text-decoration: underline;
    color: #bcceed;
}

.nav {
    display: inline-block;
    position: relative;
   
   }

.nav ul li>a {
    color: #F5CA9B;
    font-size: 1.6rem;
    font-weight: 300;
    padding: 0 15px 0 0;
    display: inline-block;

}

.nav:hover {
    font-weight: 600;

}

.nav:focus {
    font-weight: 600;

}

.nav#home {
    color: #F5CA9B;
    font-size: 1.6rem;
    font-weight: 400;
    text-decoration: underline;
    padding-left: 0;
}

.nav#about {
    color: #F5CA9B;
    font-size: 1.6rem;
    font-weight: 400;
    text-decoration: underline;
}


@media only screen and (min-width: 640px) {
    .hidden-on-desktop {
        display: none;
    }

}



img {
    width: 100%;
}

/*******************************************/
/* layout styling*/
/*******************************************/


.container {
    width: 100%;
    max-width: 120rem;
    margin-left: 5%;
    margin-right: 5%;
 }
    .container p {
        padding: 5%;
    }
 

.row {
    margin: 56px 0;

}

.row p{
    margin: 0 0 8px 0;
    padding: 0 5% 8px;
}


.text-centered {
    text-align: center;
    margin: 0;
}

ul {
    list-style: none;
   
}


/*******************************************/
    /* layout index*/
/*******************************************/



#homepage .row {
    padding: 8px 0 0px;
   margin-top: 0%;
   
}

#homepage h1 {
    margin: 0px;
    
}

#homepage h3 {
    padding: 56px 0 8px 5%;
    position: relative;
     
 }
 
 
 #homepage img {
    width: 89%;
    left: 5%;
    right: 5%;
    position: relative;
    margin: 0 0 8px 0;
   
 
}



/*******************************************/
/* layout aag*/
/*******************************************/


#aag-index.bg-grad {
    width: 89vw;
    height: 45%;
    left: 5%;
    right: 5%;
    position: relative;
    background-image: linear-gradient(110deg, #ffffff, #9A96AD);

}

#aag-index img {
    position: relative;
    width: 45%;
    padding-top: 32px;

}

#aag-index h5 {
    color: #646A8A;
    padding-top: 16px;
    padding-left: 16px;
}


/*******************************************/
/* layout about*/
/*******************************************/

#about-page h1 {
    margin: 0px;
}
.desktop-profile {
    width: 14%;
    margin: 42px auto 0;
    position: relative;

}
#skills {
    min-width: 100%;
    display: flex;
    justify-content: space-between;
    padding: 0 5% 0;
  
}

 

/*******************************************/
/* Button & Footer*/
/*******************************************/



#button {
    display: inline-block;
    min-width: 58%;
    max-width: 511px;
    color: #F5CA9B;
    border: 1px solid #F5CA9B;
    background-color: transparent;
    font-weight: 400;
    text-align: center;
    padding: 4px;
    border-radius: 6px;
    margin: 48px 0 16px;
    left: 50%;
    right: 50%;
    transform: translatex(-50%);
    position: relative;
    


}

.button:hover {
    background-color: #F5CA9B;
    color: #08090c;
}

.button:focus {
    background-color: #F5CA9B;
    color: #08090c;
}


.footer h4 a {
    padding: 16px 0 8px;
}

#contact .footer p {
    padding: 0 0 8px;
    position: relative;
    left: 0;
    
   }

#contact .footer {
    border-top: 1px solid #F5CA9B;
    margin: 24px 0 4px 0;
    padding: 16px 5% 0;
    width: 100%;
    position: relative;
    left: 0%;}

    .social-icons {
        display: inline-block;
        padding: 0 5%;
    }
    
    .social-icons>a {
        width: 32px;
        height: 32px;
        margin: 16px 8px 16px 0;
        display: inline-block;
        position: relative;
    }

